# TND004-Data-Structures-Labs

Lab 2/code/: lab2.cpp
Lab 3 part 1/collisionsystem/: CMakeLists.txt  README.md
Lab 3 part 1/collisionsystem/include/particlesystem/: event.h  priorityqueue.h
Lab 3 part 1/collisionsystem/src/: lab3.cpp
Lab 3 part 1/collisionsystem/src/particlesystem/: collisionsystem.cpp
Lab 3 part 2/detectionsystem/: CMakeLists.txt
Lab 3 part 2/detectionsystem/data/output/: segments-largeMystery.txt  segments-points1.txt  segments-points1423.txt  segments-points20.txt  segments-points200.txt  segments-points40.txt  segments-points5.txt  segments-points56.txt  segments-points6.txt  segments-points8.txt
Lab 3 part 2/detectionsystem/include/linesdiscoverysystem/: readfiles.h
Lab 3 part 2/detectionsystem/src/: lab3-part2.cpp
Lab 3 part 2/detectionsystem/src/linesdiscoverysystem/: readfiles.cpp
Lab 3 part 2/detectionsystem/src/rendering/: window.cpp
Lab 4/code/: CMakeLists.txt
Lab 4/code/code4a/: digraph.cpp  digraph.h  main.cpp
Lab 4/code/code4b/: dsets.cpp  graph.cpp  graph2_test_run.txt  main.cpp
lab1/code/: lab1.cpp
lab2/code/: lab2.cpp  set.cpp
